# cmf

./: .gitignore  Cargo.toml  README.md
src/: execution.rs  main.rs  selection.rs  tasks.rs
src/application/: mod.rs
src/application/port/repository/: fzf_repository.rs  mod.rs  task_repository.rs
src/application/usecase/: execute_task.rs  get_tasks.rs  mod.rs  select_task.rs
src/domain/: mod.rs
src/domain/entity/: mod.rs  task.rs
src/domain/model/: mod.rs  task.rs  task_name.rs
src/domain/repository/: fzf_repository.rs  mod.rs  task_repository.rs
src/domain/value_object/: mod.rs
src/infrastructure/gateway/: mod.rs
src/infrastructure/gateway/fzf/: fzf_gateway.rs  mod.rs
src/infrastructure/gateway/makefile/: makefile_gateway.rs  mod.rs
src/infrastructure/repository/: constant.rs  fzf_repository.rs  makefile_repository.rs  mod.rs
src/infrastructure/repository/fzf/: fzf_repository.rs  mod.rs
src/infrastructure/repository/makefile/: makefile_repository.rs  mod.rs
src/interface/controller/: cli_controller.rs  mod.rs
src/interface/presenter/: cli_presenter.rs
src/presentation/cli/: main.rs
src/presentation/cli/adapter/: cmf.rs  cmf_adapter.rs  mod.rs  root_command.rs
src/presentation/cli/adapter/dto/: mod.rs  task_dto.rs
src/presentation/cli/adapter/formatter/: cli_formatter.rs  cmf_formatter.rs  mod.rs
src/presentation/cli/adapter/mapper/: mod.rs  task_mapper.rs
src/presentation/handler/: cli_handler.rs  constant.rs  mod.rs
src/usecase/: constant.rs  execute_task.rs  get_tasks.rs  mod.rs  select_task.rs
(+3 files in other folders)
