[package]
name = "cmf"
version = "0.1.0"
edition = "2021"
authors = ["yanosea"]
description = "cargo-make × fzf"
license = "MIT"
repository = "https://github.com/yanosea/cmf"
exclude = ["/.git", ".gitignore"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
colored = "2.0"
toml = "0.5"
thiserror = "1.0"
